# Bridge_your_copilot

./: .gitignore  AGENTS.md  LICENSE  README.md  extension.js  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
bridge_your_copilot/: __init__.py  cli.py  client.py
copilot/: __init__.py  cli.py  client.py
main/bridge_your_copilot/: cli.py
python/: copilot_bridge_client.py
python/bridge_your_copilot/: __init__.py  client.py
python/copilot_bridge/: __init__.py  client.py
src/: extension.js  http-handler.js  model-selection.js
tests/: http-handler.test.js  model-selection.test.js
